--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-portfolio",
-  "homepage": "https://ed0920.github.io/react-portfolio",
+  "homepage": "http://ed0920.github.io/react-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
